# harness-creator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT-harness-creator-2026-07-19.md  CHANGELOG.md  GUIDE.md  HANDOFF-2026-07-19-remocao-era-congelada-e-dogfood.md  HANDOFF-2026-07-20-v0.17-dogfood-story-3.3.md  PLAN.md  README.md  ROADMAP-fase1.backlog.md  ROADMAP-fase1.correction.backlog.md  ROADMAP-fase1.outcomes-report.md  ROADMAP-fase2.backlog.md  ROADMAP-fase3.backlog.md  ROADMAP-fase4.backlog.md  ROADMAP-issue1-friccao-sessao-real.correction.backlog.md  ROADMAP-issues2-5-dogfood-story3.3.correction.backlog.md  ROADMAP.md  TUTORIAL.md  claude-progress.md  init.ps1  init.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.harness/: harness.yaml
config/: harness.yaml
docs/: preflight.md  roadmap-autonomous.md
sandbox/: Dockerfile
scripts/: make_playground.py
tests/: _helpers.py  conftest.py  test_analyzer.py  test_approval_async.py  test_audit.py  test_boundary_guard.py  test_branching.py  test_cli.py  test_compiler.py  test_config.py  test_contract.py  test_doctor.py  test_eet_escalation.py  test_filesystem_tools.py  test_governance_gates.py  test_harness_smoke.py  test_killswitch.py  test_lifecycle.py  test_preflight.py  test_review.py  test_review_fixes.py  test_runtime_audit.py  test_sandbox_cancel.py  test_sandbox_docker_check.py  test_session_budget.py  test_session_permissions.py  test_session_start.py  test_stop_hook.py  test_supervisor.py  test_tdd_guard.py  test_tdd_tools_registration.py  test_team_audit.py  test_teams.py  (+5 more)
(+98 files in other folders)
